@@ -35,6 +35,7 @@ namespace Mono.Debugging.Backend
 		void NotifyTargetEvent (TargetEventArgs args);
 		void NotifyTargetOutput (bool isStderr, string line);
 		void NotifyDebuggerOutput (bool isStderr, string line);
+		bool NotifyCustomBreakpointAction (string actionId, object handle);
 		
 		// To be called when the process is ready to run.
 		void NotifyStarted ();
